@@ -23,4 +23,4 @@ Examples
 >>> f = ot.AggregatedFunction(basis)
 >>> x = [2, 3]
 >>> print(f(x))
-[1,2,3,4,12,9]"
+[1,2,3,4,6,9]"
