@@ -35,8 +35,8 @@ basis= Basis( [class=LinearEvaluation name=Unnamed center=[0,0] constant=[1] lin
    [ 0 ]]
   quadratic :
   sheet #0
-  [[ 0 2 ]
-   [ 2 0 ]]
+  [[ 0 1 ]
+   [ 1 0 ]]
 ,QuadraticEvaluation
   center :
     [0,0]
@@ -50,4 +50,4 @@ basis= Basis( [class=LinearEvaluation name=Unnamed center=[0,0] constant=[1] lin
   [[ 0 0 ]
    [ 0 2 ]]
 ] )
-y= [1,2,3,4,12,9]
+y= [1,2,3,4,6,9]
